--- a/sass/front-page/_hero.scss
+++ b/sass/front-page/_hero.scss
@@ -3,17 +3,6 @@
   width: 100%;
   height: 575px;
 
-  // &:after {
-  //   content: "";
-  //   top: 0;
-  //   right: 0;
-  //   bottom: 0;
-  //   left: 0;
-  //   position: absolute;
-  //   background-color: $color__brand-4;
-  //   opacity: 0.75;
-  // }
-
   img {
     object-fit: cover;
     font-family: "object-fit: cover";
@@ -56,6 +45,9 @@
       padding-bottom: 1em;
       width: 200px;
       margin: 0 auto;
+      -webkit-backface-visibility: hidden;
+      -webkit-transform: translateZ(0) scale(1.0, 1.0);
+      transform: translateZ(0);
 
       .blue-bolt {
         display: block;
@@ -74,6 +66,7 @@
         width: 100%;
         bottom: 48px;
         z-index: 1000;
+
       }
     }
 
